test/errors/error11.vult

fun foo() {
   val x = [(0,1)];
}
